--- a/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
+++ b/src/app/nested-components/bytesize-icon/bytesize-icon.component.html
@@ -36,6 +36,9 @@
     <ng-container *ngSwitchCase="'i-close'">
       <svg:path d="M2 30 L30 2 M30 30 L2 2" />
     </ng-container>
+    <ng-container *ngSwitchCase="'i-activity'">
+      <svg:path d="M4 16 L11 16 14 29 18 3 21 16 28 16" />
+    </ng-container>
     <ng-container *ngSwitchDefault>
       <ng-content></ng-content>
     </ng-container>
