--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,8 +95,28 @@
         </div>
       </div>
     </div>
-    <div [@activity]="showActivity" class="sidebar-wrapper full-page scrollable">
-      <!-- Activity -->
+    <div class="sidebar-wrapper full-page scrollable text-light bg-dark d-flex flex-column justify-content-end">
+      <accordion [closeOthers]="true" [@activity]="showActivity">
+        <accordion-group *ngFor="let activity of commandService.activities; let i = index;" [isOpen]="i + 1 === commandService.activities.length">
+          <div accordion-heading class="d-flex justify-content-between">
+            <small>{{ activity.runAt | amCalendar:{sameDay:'h:mm A'} }}</small>
+            <span *ngIf="activity.isSuccess" class="badge badge-success w-25 rounded-0">Success</span>
+            <span *ngIf="!activity.isSuccess" class="badge badge-danger w-25 rounded-0">Failed</span>
+          </div>
+          <div *ngFor="let command of activity.commands" (click)="onView(command); commandModal.show();" class="lead clickable w-100 text-hover-primary">
+            {{command.name}}
+          </div>
+          <div *ngIf="activity.commands.length === 0" class="lead w-100">
+            <em>Scripts not found</em>
+          </div>
+          <small *ngIf="!activity.voice" class="px-2">
+            triggered manually
+          </small>
+          <small *ngIf="activity.voice" class="px-2">
+            by Voice: <em>{{activity.voice}}</em>
+          </small>
+        </accordion-group>
+      </accordion>
     </div>
   </div>
 </main>
@@ -114,9 +134,6 @@
       <button type="button" class="btn btn-light rounded-0 showOnHover text-muted text-hover-warning" (click)="onEdit(item.value); commandModal.show();">
         <app-bytesize-icon id="i-edit"></app-bytesize-icon>
       </button>
-      <!-- <button type="button" class="btn btn-light rounded-0 showOnHover text-muted" (click)="onDuplicate(item.value); commandModal.show();">
-        <app-bytesize-icon id="i-clipboard"></app-bytesize-icon>
-      </button> -->
       <button type="button" class="btn btn-light rounded-0 showOnHover text-muted text-hover-danger mr-3" mwlConfirmationPopover
         popoverTitle="Are you sure?" popoverMessage="Delete '{{item.value.name}}' permanently" (confirm)="delete(item.value)"
         placement="{{item.value.id === 1 ? 'bottom' : 'top'}}">
@@ -136,95 +153,97 @@
       <form #commandForm="ngForm">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">{{command.id ? 'Edit' : 'New'}}</h5>
+            <h5 class="modal-title">{{command.id > 0 ? 'Edit' : command.id === -1 ? 'View' : 'New'}}</h5>
             <button type="button" class="close" (click)="commandModal.hide();">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-            <div class="form-group row">
-              <label for="inputName" class="col-sm-2 col-form-label">Name</label>
-              <div class="col-sm-10">
-                <input [(ngModel)]="command.name" [ngClass]="{'is-valid': name.valid && !name.pristine, 'is-invalid': !name.valid && !name.pristine}"
-                  type="text" class="form-control" id="inputname" name="inputName" #name="ngModel" required>
-                <div [hidden]="name.valid || name.pristine" class="invalid-feedback">
-                  Name is required
+          <fieldset [disabled]="command.id === -1">
+            <div class="modal-body">
+              <div class="form-group row">
+                <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                  <input [(ngModel)]="command.name" [ngClass]="{'is-valid': name.valid && !name.pristine, 'is-invalid': !name.valid && !name.pristine}"
+                    type="text" class="form-control" id="inputname" name="inputName" #name="ngModel" required>
+                  <div [hidden]="name.valid || name.pristine" class="invalid-feedback">
+                    Name is required
+                  </div>
                 </div>
               </div>
+              <div class="form-group row">
+                <label for="inputCommand" class="col-sm-2 col-form-label">Script</label>
+                <div class="col-sm-10">
+                  <textarea fz-elastic [(ngModel)]="command.script" [ngClass]="{'is-valid': script.valid && !script.pristine, 'is-invalid': !script.valid && !script.pristine}"
+                    class="form-control" id="inputScript" name="inputScript" #script="ngModel" rows="1" required></textarea>
+                  <div [hidden]="script.valid || script.pristine" class="invalid-feedback">
+                    Script is required
+                  </div>
+                  <small class="form-text">
+                    <a class="text-muted" placement="bottom" tabindex="-1" href="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg"
+                      tooltip="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg" containerClass="nowrap">
+                      Powershell syntax
+                      <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
+                    </a>
+                  </small>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="inputVoice" class="col-sm-2 col-form-label">Voice</label>
+                <div class="col-sm-10">
+                  <input [(ngModel)]="command.voice" [ngClass]="{'is-valid': voice.valid && !voice.pristine, 'is-invalid': !voice.valid && !voice.pristine}"
+                    type="text" class="form-control" name="inputVoice" id="inputVoice" #voice="ngModel">
+                  <small class="form-text">
+                    <a class="text-muted" placement="bottom" tabindex="-1" href="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf"
+                      tooltip="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf" containerClass="nowrap">
+                      Regular Expressions syntax
+                      <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
+                    </a>
+                  </small>
+                </div>
+              </div>
+              <ng-container *ngIf="command.voice && isContainParams(command.voice)">
+                <div class="form-group row">
+                  <label for="inputParams" class="col-sm-2 col-form-label">Parameters</label>
+                  <div class="col-sm-10">
+                    <input [(ngModel)]="command.params" [ngClass]="{'is-valid': params.valid && !params.pristine, 'is-invalid': !params.valid && !params.pristine}"
+                      type="text" class="form-control" name="inputParams" id="inputParams" #params="ngModel">
+                    <small class="form-text text-muted">Comma-separated value params for each (.*) in voice command</small>
+                  </div>
+                </div>
+              </ng-container>
+              <ng-container *ngIf="command.id > 0">
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Runs</label>
+                  <div class="col-sm-10">
+                    <label class="form-control-plaintext">{{command.runs}}</label>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Last run</label>
+                  <div class="col-sm-10">
+                    <label class="form-control-plaintext">{{command.lastRunAt ? (command.lastRunAt | amCalendar) : 'Not run yet'}}</label>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Updated</label>
+                  <div class="col-sm-10">
+                    <label class="form-control-plaintext">{{command.updatedAt | amCalendar}}</label>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Created</label>
+                  <div class="col-sm-10">
+                    <label class="form-control-plaintext">{{command.createdAt | amCalendar}}</label>
+                  </div>
+                </div>
+              </ng-container>
             </div>
-            <div class="form-group row">
-              <label for="inputCommand" class="col-sm-2 col-form-label">Script</label>
-              <div class="col-sm-10">
-                <textarea fz-elastic [(ngModel)]="command.script" [ngClass]="{'is-valid': script.valid && !script.pristine, 'is-invalid': !script.valid && !script.pristine}"
-                  class="form-control" id="inputScript" name="inputScript" #script="ngModel" rows="1" required></textarea>
-                <div [hidden]="script.valid || script.pristine" class="invalid-feedback">
-                  Script is required
-                </div>
-                <small class="form-text">
-                  <a class="text-muted" placement="bottom" tabindex="-1" href="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg"
-                    tooltip="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg" containerClass="nowrap">
-                    Powershell syntax
-                    <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
-                  </a>
-                </small>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="inputVoice" class="col-sm-2 col-form-label">Voice</label>
-              <div class="col-sm-10">
-                <input [(ngModel)]="command.voice" [ngClass]="{'is-valid': voice.valid && !voice.pristine, 'is-invalid': !voice.valid && !voice.pristine}"
-                  type="text" class="form-control" name="inputVoice" id="inputVoice" #voice="ngModel">
-                <small class="form-text">
-                  <a class="text-muted" placement="bottom" tabindex="-1" href="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf"
-                    tooltip="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf" containerClass="nowrap">
-                    Regular Expressions syntax
-                    <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
-                  </a>
-                </small>
-              </div>
-            </div>
-            <ng-container *ngIf="command.voice && isContainParams(command.voice)">
-              <div class="form-group row">
-                <label for="inputParams" class="col-sm-2 col-form-label">Parameters</label>
-                <div class="col-sm-10">
-                  <input [(ngModel)]="command.params" [ngClass]="{'is-valid': params.valid && !params.pristine, 'is-invalid': !params.valid && !params.pristine}"
-                    type="text" class="form-control" name="inputParams" id="inputParams" #params="ngModel">
-                  <small class="form-text text-muted">Comma-separated value params for each (.*) in voice command</small>
-                </div>
-              </div>
-            </ng-container>
-            <ng-container *ngIf="command.id">
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Runs</label>
-                <div class="col-sm-10">
-                  <label class="form-control-plaintext">{{command.runs}}</label>
-                </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Last run</label>
-                <div class="col-sm-10">
-                  <label class="form-control-plaintext">{{command.lastRunAt ? (command.lastRunAt | amCalendar) : 'Not run yet'}}</label>
-                </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Updated</label>
-                <div class="col-sm-10">
-                  <label class="form-control-plaintext">{{command.updatedAt | amCalendar}}</label>
-                </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Created</label>
-                <div class="col-sm-10">
-                  <label class="form-control-plaintext">{{command.createdAt | amCalendar}}</label>
-                </div>
-              </div>
-            </ng-container>
-          </div>
+          </fieldset>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" mwlConfirmationPopover popoverTitle="Are you sure?" popoverMessage="Delete '{{command.name}}' permanently"
-              placement="top" (confirm)="delete(); commandModal.hide();" *ngIf="command.id">Delete</button>
+              placement="top" (confirm)="delete(); commandModal.hide();" *ngIf="command.id > 0">Delete</button>
             <button type="button" class="btn btn-secondary ml-auto" (click)="commandModal.hide()">Close</button>
-            <button type="button" class="btn btn-primary" (click)="commandForm.form.valid && submit(); commandModal.hide();">Save</button>
+            <button type="button" class="btn btn-primary" (click)="commandForm.form.valid && submit(); commandModal.hide();" *ngIf="command.id !== -1">Save</button>
           </div>
         </div>
       </form>
@@ -237,11 +256,25 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title">Configuration</h5>
+            <a placement="bottom" tabindex="-1" containerClass="nowrap" (click)="openItem(storeService.getConfigLocation())" [tooltip]="storeService.getConfigLocation()">
+              <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
+            </a>
             <button type="button" class="close" (click)="configModal.hide();">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
+            <div class="form-group row">
+              <label for="inputClearActivityAfterHours" class="col-sm-3 col-form-label">Number of hours keep activity in history</label>
+              <div class="col-sm-9">
+                <div class="input-group">
+                  <input [(ngModel)]="configuration.clearActivityAfterHours" type="number" class="form-control" id="inputClearActivityAfterHours" name="inputClearActivityAfterHours">
+                </div>
+                <small class="form-text">
+                  Default to 48 hours, set 0 to keep all history
+                </small>
+              </div>
+            </div>
             <div class="form-group row">
               <label for="inputPushbulletApiKey" class="col-sm-3 col-form-label">Pushbullet Api Key</label>
               <div class="col-sm-9">
@@ -252,25 +285,6 @@
                   <a class="text-muted" placement="bottom" tabindex="-1" href="https://www.pushbullet.com/#settings/account" tooltip="https://www.pushbullet.com/#settings/account"
                     containerClass="nowrap">
                     Pushbullet > Settings > Create Access Token
-                    <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
-                  </a>
-                </small>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="inputDatabaseLocation" class="col-sm-3 col-form-label">Database Location</label>
-              <div class="col-sm-9">
-                <div class="input-group">
-                  <input [(ngModel)]="configuration.databaseLocation" type="text" class="form-control" id="inputDatabaseLocation" name="inputDatabaseLocation">
-                  <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" (click)="configuration.databaseLocation = selectItem('openDirectory')">Browse</button>
-                  </div>
-                </div>
-                <small class="form-text text-muted">
-                  Default to
-                  <a class="text-muted" placement="bottom" tabindex="-1" (click)="openItem(storeService.getConfigLocation())" [tooltip]="storeService.getConfigLocation()"
-                    containerClass="nowrap">
-                    User AppData folder
                     <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
                   </a>
                 </small>
