--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <li class="nav-item">
         <button class="btn btn-link nav-link" [ngClass]="{'active': showTopPage}" (click)="showTopPage = true; showActivity = false;">Home</button>
       </li>
-      <li class="nav-item">
+      <li *ngIf="commands.length > 0" class="nav-item">
         <button class="btn btn-link nav-link" [ngClass]="{'active': !showTopPage}" (click)="showTopPage = false">Scripts</button>
       </li>
     </ul>
@@ -23,12 +23,12 @@
         </button>
       </li>
       <li class="nav-item">
-        <button class="btn btn-link nav-link text-hover-light" (click)="showTopPage = false; showFilter = true; searchInput.focus();">
+        <button *ngIf="commands.length > 0" class="btn btn-link nav-link text-hover-light" (click)="showTopPage = false; showFilter = true; searchInput.focus();">
           <app-bytesize-icon id="i-search" size="22" stroke="2"></app-bytesize-icon>
         </button>
       </li>
       <li class="nav-item">
-        <button class="btn btn-link nav-link text-hover-light" (click)="showTopPage = false; showActivity = !showActivity;">
+        <button *ngIf="commands.length > 0" class="btn btn-link nav-link text-hover-light" (click)="showTopPage = false; showActivity = !showActivity;">
           <app-bytesize-icon id="i-activity" size="22" stroke="2"></app-bytesize-icon>
         </button>
       </li>
@@ -39,6 +39,7 @@
       </li>
     </ul>
   </nav>
+
   <div id="searchInput" [@searchState]="showFilter || keyword ? 'show' : 'hide'">
     <input #searchInput [(ngModel)]="keyword" (ngModelChange)="filter()" (blur)="showFilter = false" type="search" class="form-control border-0 rounded-0">
     <button class="btn btn-link close" (click)="keyword = ''; showFilter = false; filter();">
@@ -69,15 +70,18 @@
           </div>
           <div class="col-6">
             <button class="btn btn-block btn-outline-primary py-3 mb-3 text-relax text-uppercase" (click)="configModal.show()">
+              <app-bytesize-icon id="i-settings"></app-bytesize-icon>
               Setting up
             </button>
           </div>
         </div>
       </div>
     </div>
-    <button *ngIf="commands.length > 0" class="btn btn-block btn-light border-0 rounded-0 py-4" (click)="showTopPage = false">
-      <app-bytesize-icon id="i-chevron-bottom" size="26"></app-bytesize-icon>
-    </button>
+    <div>
+      <button *ngIf="commands.length > 0" class="btn btn-block btn-light border-0 rounded-0 py-4" (click)="showTopPage = false">
+        <app-bytesize-icon id="i-chevron-bottom" size="26"></app-bytesize-icon>
+      </button>
+    </div>
   </div>
 
   <div [@commands]="!showTopPage" *ngIf="commands.length > 0" id="commands">
@@ -92,7 +96,7 @@
         </div>
         <div class="col-6">
           <button type="button" class="btn btn-block btn-outline-danger border-0 rounded-0 py-4" mwlConfirmationPopover popoverTitle="Are you sure?"
-            popoverMessage="Delete all commands" placement="top" appendToBody="true" (confirm)="deleteAll()">Delete All</button>
+            popoverMessage="Delete all commands" placement="top" appendToBody="true" (confirm)="deleteAll(); showTopPage = true;">Delete All</button>
         </div>
       </div>
     </div>
